# lab08

./: .dockerignore  CMakeLists.txt  ChangeLog.md  Dockerfile  test.cpp
.github/workflows/: build.yml
banking/: CMakeLists.txt
